fixed whitespaces in frontend

--- a/science-archive-web/src/app/modules/admin/components/admin-news-card/admin-news-card.component.scss
+++ b/science-archive-web/src/app/modules/admin/components/admin-news-card/admin-news-card.component.scss
@@ -13,8 +13,9 @@
   color: #646464;
 }
 
-.article-description {
+.news-body {
   color: #7a7a7a;
   font-size: 0.9em;
   margin-top: 25px;
+  white-space: pre-wrap;
 }
