--- a/science-archive-web/src/app/modules/articles/components/article-card/article-card.component.scss
+++ b/science-archive-web/src/app/modules/articles/components/article-card/article-card.component.scss
@@ -18,4 +18,5 @@
   font-size: 0.9em;
   margin-top: 25px;
   margin-bottom: 20px;
+  white-space: pre-wrap;
 }
