--- a/science-archive-web/src/app/modules/articles/pages/article-details-page/article-details-page.component.scss
+++ b/science-archive-web/src/app/modules/articles/pages/article-details-page/article-details-page.component.scss
@@ -6,4 +6,5 @@ h2 {
   color: #3b3b3b;
   margin-top: 50px;
   line-height: 1.4em;
+  white-space: pre-wrap;
 }
