--- a/science-archive-web/src/app/modules/news/components/news-card/news-card.component.scss
+++ b/science-archive-web/src/app/modules/news/components/news-card/news-card.component.scss
@@ -13,4 +13,5 @@
   margin-top: 20px;
   margin-bottom: 20px;
   font-size: 0.9em;
+  white-space: pre-wrap;
 }
